--- a/api/package.json
+++ b/api/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.4",
     "express": "^4.15.3",
     "jwt-simple": "^0.5.1",
+    "method-override": "^2.3.9",
     "moment": "^2.18.1",
     "mysql": "^2.13.0"
   },
